--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-		<base href="/" />
+		<!-- <base href="/" /> -->
+		<base href="/demoseo/" />
 
 		<meta charset="UTF-8" />
 		<meta content="IE=Edge" http-equiv="X-UA-Compatible" />
@@ -42,7 +43,7 @@
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNU7igk_2x8_JPATXGJs3oIzcZQSVQHxQ&region=VI&language=vi&libraries=places&callback=Function.prototype"></script>
 		<script>
 			// The value below is injected by flutter build, do not touch.
-			const serviceWorkerVersion = "1803758238";
+			const serviceWorkerVersion = "1719308935";
 		</script>
 		<!-- This script adds the flutter initialization JS code -->
 		<script src="flutter.js" defer=""></script>
@@ -123,7 +124,7 @@
 				});
 
 				window.addEventListener('flutter-first-frame', function () {
-					navigator.serviceWorker.register('flutter_service_worker.js?v=1803758238');
+					navigator.serviceWorker.register('flutter_service_worker.js?v=1719308935');
 				});
 			}
 		</script> -->
